--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,9 @@
 Package: rARACNE
 Title: Tools for interfacing with ARACNE from R
-Description: 
+Description: Tools for interfacing with ARACNE from R
 Version: 0.1
 Author: Aaron Brooks <abrooks@systemsbiology.org>
 Maintainer: Aaron Brooks <abrooks@systemsbiology.org>
 License: MIT
+Collate:
+    'rARACNE.R'
